# 890ToAss

./: CMakeLists.txt  README_TODO.txt  gTest function list.txt
include/: 890toass.hpp  export.hpp  pactoass.hpp  stltoass.hpp
source/: 890toass.cpp  CMakeLists.txt  my_api.cpp  my_api.h  pactoass.cpp  stltoass.cpp
source/cavena_reader/Formats/: Cavena890.cpp  Cavena890.h  Ebu.cpp  Ebu.h  Pac.cpp  Pac.h  PacUnicode.cpp  PacUnicode.h  SubtitleFormat.cpp  SubtitleFormat.h
source/cavena_reader/libse/: Configuration.cpp  Configuration.h  FileUtil.cpp  FileUtil.h  LanguageAutoDetect.cpp  LanguageAutoDetect.h  Paragraph.cpp  Paragraph.h  Settings.cpp  Settings.h  StringExtensions.cpp  StringExtensions.h  Subtitle.cpp  Subtitle.h  TimeCode.cpp  TimeCode.h  TimeSpan.cpp  TimeSpan.h  Utilities.cpp  Utilities.h
source/common/: bankersrounding.h  define.cpp  define.h  exceptionhelper.h  stringbuilder.h  stringhelper.h  vectorhelper.h
source/linux_lib/: findfirst.cpp  findfirst.h  spec.cpp  spec.h
sub_samples/: GBNAT6003122.890  GBNAT6003122.ass  NE765178.890  NE765178.ass  TTY9001051HB.890  TTY9001051HB.ass  TTY9001051HB_converted_plugin.ass  TTY9001051RU.890  TTY9001051RU.ass  crash1.890  crash1.ass
sub_samples1/: AM132765-RON-test.ass  AM132765-RON.STL  AM132765-RON.ass  BB110159-DAN-test.ass  BB110159-DAN.STL  BB110159-DAN.ass  BB110159-FIN.STL  BB110159-FIN.ass  BB110159-NOR-test.ass  BB110159-NOR.STL  BB110159-NOR.ass  BB110159-SWE.STL  BB110159-SWE.ass  BB110162-DAN.STL  BB110162-DAN.ass  BB110162-FIN.STL  BB110162-FIN.ass  BB110162-NOR.STL  BB110162-NOR.ass  BB110162-SWE.STL  BB110162-SWE.ass  MO_20180423_1879_ro-test.ass  MO_20180423_1879_ro.ass  MO_20180423_1879_ro.stl
test/: CMakeLists.txt  main.cpp  test_890_to_ass.cpp  test_utilities.cpp
